--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  get_it: ^9.0.5
   go_router: ^16.2.5
   google_fonts: ^6.3.2
   hive: ^2.2.3
